# dtracker_gui

./: .gitignore  CMakeLists.txt  Main.qml  README.md
audio/: audiomanager.cpp  audiomanager.h
audio/types/: audiodeviceinfo.h
src/audio/: CMakeLists.txt  decoder.cpp  decoder.h  manager.cpp  manager.h
src/audio/qml/pages/: AudioSettingsPage.qml  DeviceInfoPage.qml
src/audio/types/: audiodeviceinfo.cpp  audiodeviceinfo.h  deviceinfo.cpp  deviceinfo.h
src/dtracker_gui/: CMakeLists.txt  Main.qml  main.cpp
src/file/: CMakeLists.txt  filesystemmodel.cpp  filesystemmodel.h  filetreemodel.cpp  filetreemodel.h
src/file/qml/: FileFinder.qml  FilePickerDialog.qml  FileTreeDelegate.qml  FileTreeView.qml
src/tracker/: CMakeLists.txt  track.cpp  track.h  tracklistmodel.cpp  tracklistmodel.h
src/tracker/pattern/: pattern_step_model.cpp  pattern_step_model.h
src/tracker/playback/: playback_facade.cpp  playback_facade.h
src/tracker/qml/: PlaybackTimer.qml  TrackView.qml
src/tracker/qml/pattern/: PatternColumn.qml
src/tracker/qml/sample/: SampleRegistryDelegate.qml  SampleRegistryView.qml
src/tracker/sample/: sample_entry.cpp  sample_entry.h  sample_facade.cpp  sample_facade.h  sample_manager_worker.cpp  sample_manager_worker.h  sample_registry.cpp  sample_registry.h  sample_registry_model.cpp  sample_registry_model.h
src/tracker/track/: track.cpp  track.h  track_list_model.cpp  track_list_model.h  track_manager.cpp  track_manager.h
src/tracker/types/: track_config.cpp  track_config.h
